--- a/Project/97CAR-Php/bdd.html
+++ b/Project/97CAR-Php/bdd.html
@@ -56,7 +56,8 @@
           <li><a href="../../parcour.html">Parcours</a></li>
 
           <li><a href="../../projet.html" class="active">Projet</a></li>
-          <li><a href="../../documentation.html">Documentation</a></li>
+          <li><a href="https://drive.google.com/drive/folders/1Or6ECzv8Ujz-JwLQ8oUSWl0D2-xw0z6r"
+              target="_blank">Documentation</a></li>
           <li><a href="../../veille.html">Veille</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -103,8 +104,8 @@
               <a href="gestion.html">Gestion de Projet </a>
               <a href="description.html">Description du Projet</a>
               <a href="https://drive.google.com/drive/folders/1TvBNybd2bC1ovjPLcyWzbwzm6NvRuYyD?usp=sharing"
-                target="_blank">Documentation</a>
-              <a href="https://github.com/lmoutanin/AP-97CAR" target="_blank">GitHub</a>
+                target="_blank" target="_blank">Documentation</a>
+              <a href="https://github.com/lmoutanin/97CAR-Php" target="_blank">GitHub</a>
             </div>
 
           </div>
@@ -128,13 +129,13 @@
 
             <h3> Modèle Physique / Relationnel : </h3>
             <br>
-            <center> <img src="../../assets/project/97car-symfony/Capture d'écran 2025-04-15 145241.png" width="700"
-                height="350" class="glightbox preview-link" class="img-fluid services-img"></center>
+            <center> <img src="../../assets/project/97car-php/bdd2.png" width="700" height="250"
+                class="glightbox preview-link" class="img-fluid services-img"></center>
 
             <br>
 
-            <center> <img src="../../assets/project/97car-symfony/Capture d'écran 2025-04-15 145549.png" width="700"
-                height="350" class="glightbox preview-link" class="img-fluid services-img"></center>
+            <center> <img src="../../assets/project/97car-php/bdd1.png" width="700" height="250"
+                class="glightbox preview-link" class="img-fluid services-img"></center>
 
             <br><br>
 
@@ -173,6 +174,15 @@
                   incluant le numéro de facture, la date d'émission, le montant total et l'ID du client, assurant une
                   connexion avec l'entité Clients. </span></li>
             </ul> <br>
+
+            <h4> Login :</h4>
+            <ul>
+              <li><i class="bi bi-arrow-right"></i> <span>Stocke les informations d'authentification des utilisateurs du
+                  système, telles que l'adresse email, le mot de passe, ainsi que des informations personnelles comme le
+                  prénom et le nom. Cette entité permet de sécuriser l'accès aux différentes fonctionnalités de la
+                  plateforme grâce à un token d'identification associé à chaque utilisateur. </span></li>
+            </ul> <br>
+
 
           </div>
 
