--- a/Project/97CAR-Php/description.html
+++ b/Project/97CAR-Php/description.html
@@ -56,7 +56,8 @@
                     <li><a href="../../parcour.html">Parcours</a></li>
 
                     <li><a href="../../projet.html" class="active">Projet</a></li>
-                    <li><a href="../../documentation.html">Documentation</a></li>
+                    <li><a href="https://drive.google.com/drive/folders/1Or6ECzv8Ujz-JwLQ8oUSWl0D2-xw0z6r"
+                        target="_blank">Documentation</a></li>
                     <li><a href="../../veille.html">Veille</a></li>
                 </ul>
                 <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -103,16 +104,15 @@
                             <a href="gestion.html">Gestion de Projet </a>
                             <a href="description.html" class="active">Description du Projet</a>
                             <a href="https://drive.google.com/drive/folders/1TvBNybd2bC1ovjPLcyWzbwzm6NvRuYyD?usp=sharing"
-                                target="_blank">Documentation</a>
-                            <a href="https://github.com/lmoutanin/AP-97CAR" target="_blank">GitHub</a>
+                                target="_blank" target="_blank">Documentation</a>
+                            <a href="https://github.com/lmoutanin/97CAR-Php" target="_blank">GitHub</a>
                         </div>
 
                     </div>
 
 
                     <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
-                        <center> <img src="../../assets/project/img/logo_97car.png" class="glightbox preview-link"
-                                alt="" class="img-fluid services-img"></center>
+
                         <br>
                         <center>
                             <h2><strong>Description du projet</strong></h2>
@@ -121,130 +121,131 @@
 
 
                         <p>
-                            Dans ce projet, une interface d'authentification a été mise en place avec Symfony pour
+                            Dans ce projet, une interface d'authentification a été mise en place avec Php pour
                             permettre aux utilisateurs de se connecter à l'interface d'administration du garage et
                             d'accéder aux outils disponibles.​
                         </p><br>
 
 
 
-                        <center> <img src="../../assets/project/97car-symfony/Capture d'écran 2025-04-15 160345.png"
-                                width="700" height="350" class="glightbox preview-link" class="img-fluid services-img">
+                        <center> <img src="../../assets/project/97car-php/home/connexion.png" width="700" height="350"
+                                class="glightbox preview-link" class="img-fluid services-img">
                         </center>
 
                         <br><br>
 
 
-                        <h4>Dans le cadre du projet 97CAR, quatre outils principaux ont été développés pour faciliter la
+                        <h4>Dans le cadre du projet 97CAR, des outils ont été développés pour faciliter la
                             gestion quotidienne du garage : </h4><br>
 
-                        <h3>1. Client </h3>
-                        <p>Cette interface permet l'enregistrement et le suivi des informations des clients.​</p>
 
-                        <center> <img src="../../assets/project/97car-symfony/client-1.png" width="700" height="350"
-                                class="glightbox preview-link" class="img-fluid services-img">
-                        </center><br>
-
-                        <center> <img src="../../assets/project/97car-symfony/client-2 (2).png" width="700" height="350"
+                        <center> <img src="../../assets/project/97car-php/home/home.png" width="700" height="350"
                                 class="glightbox preview-link" class="img-fluid services-img">
                         </center><br>
 
 
-                        <center> <img src="../../assets/project/97car-symfony/client4.png" width="700" height="220"
+                        <h3>1. +Client </h3>
+                        <p>Cette interface permet l'enregistrement des clients​</p>
+
+                        <center> <img src="../../assets/project/97car-php/home/addClient.png" width="700" height="350"
                                 class="glightbox preview-link" class="img-fluid services-img">
                         </center><br>
 
+                        <h3>2. Client </h3>
+                        <p>Cette interface permet le suivi des clients​</p>
 
-                        <center> <img src="../../assets/project/97car-symfony/client5.png" width="700" height="350"
+                        <center> <img src="../../assets/project/97car-php/home/client.png" width="700" height="350"
                                 class="glightbox preview-link" class="img-fluid services-img">
-                        </center><br><br>
+                        </center><br>
+
+                        <h3>3. +Réparation </h3>
+                        <p>Cette interface permet l'enregistrement des Réparation​</p>
+
+                        <center> <img src="../../assets/project/97car-php/home/addRéparation.png" width="700"
+                                height="350" class="glightbox preview-link" class="img-fluid services-img">
+                        </center><br>
+
+                        <h3>4. Voiture </h3>
+                        <p>Cette interface permet le suivi des voiture.​</p>
+
+                        <center> <img src="../../assets/project/97car-php/home/voiture.png" width="700" height="350"
+                                class="glightbox preview-link" class="img-fluid services-img">
+                        </center><br>
+
+                        <h3>5. Facture </h3>
+                        <p>Cette interface permet le suivi des factures .​</p>
+
+                        <center> <img src="../../assets/project/97car-php/home/facture.png" width="700" height="350"
+                                class="glightbox preview-link" class="img-fluid services-img">
+                        </center><br>
+                        <h3>6. Réparation </h3>
+                        <p>Cette interface permet le suivi des réparation .​</p>
+
+                        <center> <img src="../../assets/project/97car-php/home/reparation.png" width="700" height="350"
+                                class="glightbox preview-link" class="img-fluid services-img">
+                        </center><br>
+
+                        <h4>D'autres outils ont également été développés, cette fois pour faciliter la gestion des
+                            clients :</h4><br>
+
+                        <center> <img src="../../assets/project/97car-php/client/home.png" width="700" height="350"
+                                class="glightbox preview-link" class="img-fluid services-img">
+                        </center><br>
+                        <h3>1. Information </h3>
+                        <p>Cette interface permet de voir les information d'un client.​</p>
+
+                        <center> <img src="../../assets/project/97car-php/client/information.png" width="700"
+                                height="350" class="glightbox preview-link" class="img-fluid services-img">
+                        </center><br>
 
                         <h3>2. Voiture </h3>
-                        <p>Cette interface permet de gère les détails des véhicules, y compris leur association avec les
-                            clients.​</p>
+                        <p>Cette interface permet de voir ensemble des véhicules d'un client.​</p>
 
-                        <center> <img src="../../assets/project/97car-symfony/voiture.png" width="700" height="350"
+                        <center> <img src="../../assets/project/97car-php/client/voiture.png" width="700" height="350"
                                 class="glightbox preview-link" class="img-fluid services-img">
                         </center><br>
 
-                        <center> <img src="../../assets/project/97car-symfony/voiture2.png" width="700" height="350"
-                                class="glightbox preview-link" class="img-fluid services-img">
-                        </center><br>
+                        <h3>3. Historique </h3>
+                        <p>Cette interface permet de voir ensemble des réparations d'un client.​</p>
 
-                        <center> <img src="../../assets/project/97car-symfony/voiture3.png" width="700" height="220"
-                                class="glightbox preview-link" class="img-fluid services-img">
-                        </center><br>
-
-                        <center> <img src="../../assets/project/97car-symfony/voiture5.png" width="700" height="350"
-                                class="glightbox preview-link" class="img-fluid services-img">
-                        </center><br>
-
-                        <center> <img src="../../assets/project/97car-symfony/voiture4.png" width="700" height="220"
-                                class="glightbox preview-link" class="img-fluid services-img">
-                        </center><br>
-
-                        <h3>3. Réparation </h3>
-                        <p>Cette interface permet d'enregistre les interventions réalisées sur les véhicules, avec les
-                            détails correspondants.​​</p>
-
-                        <center> <img src="../../assets/project/97car-symfony/reparation.png" width="700" height="350"
-                                class="glightbox preview-link" class="img-fluid services-img">
-                        </center><br>
-
-                        <center> <img src="../../assets/project/97car-symfony/reparation2.png" width="700" height="220"
-                                class="glightbox preview-link" class="img-fluid services-img">
-                        </center><br>
-
-                        <center> <img src="../../assets/project/97car-symfony/reparation3 (2).png" width="700"
-                                height="200" class="glightbox preview-link" class="img-fluid services-img">
-                        </center><br>
-
-                        <center> <img src="../../assets/project/97car-symfony/reparation4.png" width="700" height="200"
-                                class="glightbox preview-link" class="img-fluid services-img">
+                        <center> <img src="../../assets/project/97car-php/client/historique.png" width="700"
+                                height="350" class="glightbox preview-link" class="img-fluid services-img">
                         </center><br>
 
                         <h3>4. Facture </h3>
-                        <p>Cette interface permet de génère et archive les factures liées aux interventions effectuées.​
-                        </p>
+                        <p>Cette interface permet de voir ensemble des factures d'un client.​</p>
 
-
-                        <center> <img src="../../assets/project/97car-symfony/facture.png" width="700" height="350"
+                        <center> <img src="../../assets/project/97car-php/client/facture.png" width="700" height="350"
                                 class="glightbox preview-link" class="img-fluid services-img">
                         </center><br>
 
-                        <center> <img src="../../assets/project/97car-symfony/facture2.png" width="700" height="220"
-                                class="glightbox preview-link" class="img-fluid services-img">
+                        <h3>5. +Voiture </h3>
+                        <p>Cette interface permet d'ajouter une voiture à un client.​</p>
+
+                        <center> <img src="../../assets/project/97car-php/client/addvoiture.png" width="700"
+                                height="350" class="glightbox preview-link" class="img-fluid services-img">
                         </center><br>
 
-                        <center> <img src="../../assets/project/97car-symfony/facture2.png" width="700" height="220"
-                                class="glightbox preview-link" class="img-fluid services-img">
+                        <h3>6. +Facture </h3>
+                        <p>Cette interface permet d'ajouter une facture à un client.​</p>
+
+                        <center> <img src="../../assets/project/97car-php/client/addFacture.png" width="700"
+                                height="350" class="glightbox preview-link" class="img-fluid services-img">
                         </center><br>
-
-                        <center> <img src="../../assets/project/97car-symfony/facture3.png" width="700" height="220"
-                                class="glightbox preview-link" class="img-fluid services-img">
-                        </center><br>
-
-                        <center> <img src="../../assets/project/97car-symfony/facture4.png" width="700" height="220"
-                                class="glightbox preview-link" class="img-fluid services-img">
-                        </center><br>
-
-                        <center> <img src="../../assets/project/97car-symfony/facture5.png" width="700" height="220"
-                                class="glightbox preview-link" class="img-fluid services-img">
-                        </center><br><br>
-
 
                         <h3>Autre</h3>
-                        <p>Dans ce projet, un système de déconnexion a été mis en place avec Symfony pour permettre aux
-                            utilisateurs de se déconnecter de l'interface d'administration du garage. Cette
+                        <p>Dans ce projet, un système de déconnexion a été mis en place pour permettre aux
+                            personnel du garagede de se déconnecter de l'interface d'administration du garage. Cette
                             fonctionnalité assure la sécurité en mettant fin à la session active, empêchant ainsi tout
                             accès non autorisé aux outils de gestion.</p>
-                        <center> <img src="../../assets/project/97car-symfony/deco.png" width="700" height="120"
+                        <center> <img src="../../assets/project/97car-php/home/deco.png" width="700" height="350"
                                 class="glightbox preview-link" class="img-fluid services-img">
                         </center><br><br>
 
-                        <center> <img src="../../assets/project/97car-symfony/Capture d'écran 2025-04-15 160345.png"
-                                width="700" height="350" class="glightbox preview-link" class="img-fluid services-img">
+                        <center> <img src="../../assets/project/97car-php/home/connexion.png" width="700" height="350"
+                                class="glightbox preview-link" class="img-fluid services-img">
                         </center>
+
 
                     </div>
 
