--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
           <li><a href="parcour.html">Parcours</a></li>
 
           <li><a href="projet.html">Projet</a></li>
-          <li><a href="documentation.html">Documentation</a></li>
+          <li><a href="https://drive.google.com/drive/folders/1Or6ECzv8Ujz-JwLQ8oUSWl0D2-xw0z6r"
+              target="_blank">Documentation</a></li>
           <li><a href="veille.html">Veille</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -87,6 +88,7 @@
           <a href="https://discord.gg/q6kKM2qKXp"><i class="bi bi-discord"></i></a>
           <a href="https://github.com/lmoutanin"><i class="bi bi-github"></i></a>
           <a href="mailto:luc.moutanin@gmail.com"><i class="bi bi-envelope-fill"></i></a>
+          <a href="https://www.linkedin.com/in/luc-moutanin-78587621a/"><i class="bi bi-linkedin"></i></a>
         </div>
       </div>
 
