--- a/parcour.html
+++ b/parcour.html
@@ -145,14 +145,14 @@
             <h3 class="resume-title">Experience Professionnelle</h3><br>
 
             <div class="resume-item">
-              <h4><a href="assets/stage/stage2.pdf">DYNAMIC EVENTS</a></h4>
+              <h4><a href="assets/rapport de stage/Rapport de stage Dynamic Events-1.pdf">DYNAMIC EVENTS</a></h4>
               <h5>Jan 2024 - Mars 2024</h5>
               <p><em>Stage Développement , Birkirkara , Malte</em></p>
 
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4><a href="assets/stage/stage1.pdf">LYCÉE AMIRAL BOUVET</a></h4>
+              <h4><a href="assets/rapport de stage/Rapport de stage   Lycee Amiral Pierre Bouvet.pdf">LYCÉE AMIRAL BOUVET</a></h4>
               <h5>Mai 2024 - Juin 2024</h5>
               <p><em>Stage Développement , Saint-Benoit , La Réunion</em></p>
 
