--- a/projet.html
+++ b/projet.html
@@ -55,7 +55,8 @@
           <li><a href="parcour.html">Parcours</a></li>
 
           <li><a href="projet.html" class="active">Projet</a></li>
-          <li><a href="documentation.html">Documentation</a></li>
+          <li><a href="https://drive.google.com/drive/folders/1Or6ECzv8Ujz-JwLQ8oUSWl0D2-xw0z6r"
+              target="_blank">Documentation</a></li>
           <li><a href="veille.html">Veille</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -107,7 +108,7 @@
               <p>Développer l'application Android CarSlim pour 97CAR, en ajoutant la gestion des clients et des factures
                 avec Kotlin, Jetpack Compose, et une API REST en PHP.</p>
               <strong class="dates"><br>
-                <p>Starter : <span> 0.0.0.0 au 0.0.0.0 </span></p>
+                <p>Starter : <span> 18/03/2025 au 20/05/2025 </span></p>
               </strong>
             </div>
           </div><!-- End Service Item -->
@@ -139,7 +140,7 @@
               <p>Créer une application web en Symfony pour le Lycée 44, permettant aux enseignants de signaler les
                 absences des étudiants et aux responsables de consulter un tableau récapitulatif.</p>
               <strong class="dates"><br>
-                <p>Starter : <span> 0.0.0.0 au 0.0.0.0 </span></p>
+                <p>Starter : <span> 10/09/2024 au 10/12/2024 </span></p>
               </strong>
             </div>
           </div><!-- End Service Item -->
@@ -156,7 +157,7 @@
               <p>Développer un système de gestion pour le garage 97CAR en PHP et MySQL, pour suivre véhicules et
                 propriétaires.</p>
               <strong class="dates"><br>
-                <p>Starter : <span>  22/02/2024 au  25/04/2024 </span></p>
+                <p>Starter : <span> 22/02/2024 au 25/04/2024 </span></p>
               </strong>
             </div>
           </div><!-- End Service Item -->
