--- a/Project/97CAR-Php/gestion.html
+++ b/Project/97CAR-Php/gestion.html
@@ -57,7 +57,8 @@
                     <li><a href="../../parcour.html">Parcours</a></li>
 
                     <li><a href="../../projet.html" class="active">Projet</a></li>
-                    <li><a href="../../documentation.html">Documentation</a></li>
+                    <li><a href="https://drive.google.com/drive/folders/1Or6ECzv8Ujz-JwLQ8oUSWl0D2-xw0z6r"
+                            target="_blank">Documentation</a></li>
                     <li><a href="../../veille.html">Veille</a></li>
                 </ul>
                 <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -104,8 +105,8 @@
                             <a href="gestion.html" class="active">Gestion de Projet </a>
                             <a href="description.html">Description du Projet</a>
                             <a href="https://drive.google.com/drive/folders/1TvBNybd2bC1ovjPLcyWzbwzm6NvRuYyD?usp=sharing"
-                                target="_blank">Documentation</a>
-                            <a href="https://github.com/lmoutanin/AP-97CAR" target="_blank">GitHub</a>
+                                target="_blank" target="_blank">Documentation</a>
+                            <a href="https://github.com/lmoutanin/97CAR-Php" target="_blank">GitHub</a>
                         </div>
 
                     </div>
