--- a/Project/97CAR-Symfony/bdd.html
+++ b/Project/97CAR-Symfony/bdd.html
@@ -56,7 +56,8 @@
           <li><a href="../../parcour.html">Parcours</a></li>
 
           <li><a href="../../projet.html" class="active">Projet</a></li>
-          <li><a href="../../documentation.html">Documentation</a></li>
+          <li><a href="https://drive.google.com/drive/folders/1Or6ECzv8Ujz-JwLQ8oUSWl0D2-xw0z6r"
+              target="_blank">Documentation</a></li>
           <li><a href="../../veille.html">Veille</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -103,7 +104,7 @@
               <a href="gestion.html">Gestion de Projet </a>
               <a href="description.html">Description du Projet</a>
               <a href="https://spectacled-chicory-108.notion.site/f15a09e153d84705b8c5b7098e520efb?v=10b119315e87804691ab000c27b50df8&p=13c119315e878078b0c7c2fd04ecfa75&pm=s"
-                target="_blank">Documentation</a>
+                target="_blank" target="_blank">Documentation</a>
               <a href="https://github.com/lmoutanin/97CAR-Symfony" target="_blank">GitHub</a>
             </div>
 
@@ -175,6 +176,17 @@
               <li><i class="bi bi-arrow-right"></i> <span>Gère les données relatives à la facturation des réparations,
                   incluant le numéro de facture, la date d'émission, le montant total et l'ID du client, assurant une
                   connexion avec l'entité Clients. </span></li>
+            </ul> <br>
+
+            <h4> Admin :</h4>
+            <ul>
+
+              <li><i class="bi bi-arrow-right"></i> <span>Stocke les informations des administrateurs, comme le
+                  nom
+                  d'utilisateur, le mot de passe et les rôles, afin de sécuriser et gérer l'accès à
+                  l'application.</span></li>
+            </ul> <br>
+            </span></li>
             </ul> <br>
 
           </div>
