--- a/Project/Cms/context.html
+++ b/Project/Cms/context.html
@@ -57,7 +57,8 @@
           <li><a href="../../parcour.html">Parcours</a></li>
 
           <li><a href="../../projet.html" class="active">Projet</a></li>
-          <li><a href="../../documentation.html">Documentation</a></li>
+          <li><a href="https://drive.google.com/drive/folders/1Or6ECzv8Ujz-JwLQ8oUSWl0D2-xw0z6r"
+              target="_blank">Documentation</a></li>
           <li><a href="../../veille.html">Veille</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -103,7 +104,7 @@
 
 
               <a href="https://drive.google.com/drive/folders/1rXiZACtI-7qadteChRysdtShVotvnf7k?usp=drive_link"
-                target="_blank">Documentation</a>
+                target="_blank" target="_blank">Documentation</a>
 
             </div>
 
