--- a/Project/Lycee44/bdd.html
+++ b/Project/Lycee44/bdd.html
@@ -56,7 +56,8 @@
           <li><a href="../../parcour.html">Parcours</a></li>
 
           <li><a href="../../projet.html" class="active">Projet</a></li>
-          <li><a href="../../documentation.html">Documentation</a></li>
+          <li><a href="https://drive.google.com/drive/folders/1Or6ECzv8Ujz-JwLQ8oUSWl0D2-xw0z6r"
+              target="_blank">Documentation</a></li>
           <li><a href="../../veille.html">Veille</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -102,7 +103,7 @@
               <a href="bdd.html" class="active">Base de Données</a>
               <a href="description.html">Description du Projet</a>
               <a href="https://drive.google.com/drive/folders/1XiE84O7Oc9EiHDL1e07qxIFdHQRWQrMx?usp=drive_link"
-                target="_blank">Documentation</a>
+                target="_blank" target="_blank">Documentation</a>
               <a href="https://github.com/lmoutanin/Lycee-44" target="_blank">GitHub</a>
             </div>
 
@@ -184,6 +185,13 @@
               <li><i class="bi bi-arrow-right"></i> <span>Fait le lien entre les absences et les matières.
 
                   Permet d’associer une absence à une ou plusieurs matières manquées. </span></li>
+            </ul> <br>
+
+            <h4> Admin :</h4>
+            <ul>
+              <li><i class="bi bi-arrow-right"></i> <span>Stocke les informations des administrateurs, comme le nom
+                  d'utilisateur, le mot de passe et les rôles, afin de sécuriser et gérer l'accès à
+                  l'application.</span></li>
             </ul> <br>
 
           </div>
