--- a/parcour.html
+++ b/parcour.html
@@ -56,7 +56,8 @@
           <li><a href="parcour.html" class="active">Parcours</a></li>
 
           <li><a href="projet.html">Projet</a></li>
-          <li><a href="documentation.html">Documentation</a></li>
+          <li><a href="https://drive.google.com/drive/folders/1Or6ECzv8Ujz-JwLQ8oUSWl0D2-xw0z6r"
+              target="_blank">Documentation</a></li>
           <li><a href="veille.html">Veille</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -152,7 +153,8 @@
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4><a href="assets/rapport de stage/Rapport de stage   Lycee Amiral Pierre Bouvet.pdf">LYCÉE AMIRAL BOUVET</a></h4>
+              <h4><a href="assets/rapport de stage/Rapport de stage   Lycee Amiral Pierre Bouvet.pdf">LYCÉE AMIRAL
+                  BOUVET</a></h4>
               <h5>Mai 2024 - Juin 2024</h5>
               <p><em>Stage Développement , Saint-Benoit , La Réunion</em></p>
 
@@ -250,7 +252,7 @@
                       <a href="service-details.html" class="stretched-link">
                         <h3>PHP et MySQL</h3>
                       </a>
-                    
+
 
                       <strong class="dates">
                         <p>Date : <span> 0.0.0.0 </span></p>
@@ -268,7 +270,7 @@
                       <a href="service-details.html" class="stretched-link">
                         <h3>Android</h3>
                       </a>
-                     
+
                       <strong class="dates">
                         <p>Date : <span> 0.0.0.0 </span></p>
                       </strong>
