--- a/profil.html
+++ b/profil.html
@@ -102,7 +102,7 @@
 
           <div class="row gy-4 justify-content-center">
             <div class="col-lg-4">
-              <img src="assets/img/software-developer-6521720_1280.jpg" class="img-fluid" alt="">
+              <img src="assets/img/logo.png" class="img-fluid" width="350" height="250" alt="">
             </div>
             <div class="col-lg-8 content">
 
